--- a/css/main.css
+++ b/css/main.css
@@ -180,10 +180,13 @@ main section{
     -webkit-filter: grayscale(100%);
     filter: grayscale(100%);
     opacity: .65;
+    transition: all 0.3s;
 }
 
 .gallery .thumbs img.selected{
-    border-color:#FF6600;;
+    border-color: #FF6600;
+    filter: grayscale(0);
+    opacity: 1;
 }
 
 .gallery .thumbs img:hover{
