More functionality added
Added navigation buttons & functionality
changed border style
jQuery for dissolving images with timer

--- a/css/main.css
+++ b/css/main.css
@@ -184,7 +184,7 @@ main section{
 }
 
 .gallery .thumbs img.selected{
-    border-color: #FF6600;
+    border: 2px dashed #FF6600;
     filter: grayscale(0);
     opacity: 1;
 }
